# LecturePhysicsAwareML

./: README.md
FFNN_ROM/: .gitignore  pyproject.toml
FFNN_ROM/data/: force.weights.h5  force.weights.txt  potential.weights.h5  potential.weights.txt  svdUS1.mat  svdUU1.mat  weights_01_1_0.h5  weights_01_1_0.txt  weights_01_1_5e-7.h5  weights_02_1_0.h5  weights_02_1_0.txt  weights_02_1_0_convex.h5  weights_02_1_0_convex.txt  weights_02_1_5e-7.h5  weights_02_1_5e-7.txt  weights_02_1_5e-7_convex.h5  weights_02_1_5e-7_convex.txt
FFNN_ROM/data/dirac_test/: Qfall.txt  q0all.txt
FFNN_ROM/data/multisin_test/: Qfall.txt  q0all.txt
FFNN_ROM/data/multisin_train/: Qfall_1.txt  Qfall_2.txt  Qfall_3.txt  q0all_1.txt  q0all_2.txt  q0all_3.txt
FFNN_ROM/data/sin_test/: Qfall.txt  q0all.txt
FFNN_ROM/data/static_test/: Qfall.txt  q0all.txt
FFNN_ROM/data/step_test/: Qfall.txt  q0all.txt
FFNN_ROM/src/: data.py  evaluation.py  plot.py
FFNN_ROM/src/paml_rom/: data.py  evaluation.py  plot.py
PINNs/: lebb_static_01.ipynb  lebb_static_02.ipynb  nlebb_static.ipynb  pyproject.toml
PINNs/data/: nlebb_static.ipynb
PINNs/notebooks/: lebb.ipynb  nlebb.ipynb
PINNs/paml_pinns/: __init__.py  train.py
PINNs/paml_pinns/lebb/: cases.py  config.py  eval.py  models.py
PINNs/paml_pinns/nlebb/: __init__.py  cases.py  config.py  models.py  utils.py
PINNs/paml_pinns/nn/: dense.py  ffnn.py
PINNs/pinns/: train.py  utils.py
PINNs/pinns/lebb/: __init__.py  cases.py  config.py  eval.py  models.py  train.py  utils.py
PINNs/pinns/nlebb/: cases.py  config.py  eval.py
PINNs/pinns/nn/: __init__.py
PINNs/src/paml_pinns/: train.py
PINNs/src/paml_pinns/nlebb/: __init__.py  (+2 more)
(+115 files in other folders)
