[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paml_pinns"
version = "25.2"
description = "Package providing modules for the PINN task."
authors = [
    { name = "Jasper O. Schommartz", email = "schommartz@cps.tu-darmstadt.de" },
]
maintainers = [
    { name = "Jasper O. Schommartz", email = " schommartz@cps.tu-darmstadt.de" }
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = ["jax", "equinox", "optax", "paramax", "matplotlib", "numpy"]

[project.urls]
Repository = "https://github.com/CPSHub/LecturePhysicsAwareML"
Issues = "https://github.com/CPSHub/LecturePhysicsAwareML/issues"